src/styles/globals.scss
@use "./colors";
@use "./variables";
@use "./mixins" as m;
@import "./fonts.css";

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

::selection {
  background-color: #233554;
  color: #ccd6f6;
}

html {
  scroll-behavior: smooth;
  color-scheme: dark;
  scrollbar-width: thin;
  scrollbar-color: #495670 var(--website-bg);
}

body {
  background: var(--website-bg);
  color: var(--main-text-color);
  font-family: var(--font-calibre);
  max-width: var(--website-width);
  width: 100%;
  margin: 0 auto;
  position: relative;

  &.noScroll {
    overflow: hidden;
  }
}

body::-webkit-scrollbar {
  width: 12px;
}

body::-webkit-scrollbar-thumb {
  background-color: #495670;
  border: 3px solid var(--website-bg);
  border-radius: 10px;

  &:hover {
    background-color: #747e92;
  }
}

body::-webkit-scrollbar-track {
  background: var(--website-bg);
}

main {
  min-height: 100dvh;
  width: 100%;
  padding-inline: 100px;
}

@include m.media(large) {
  main {
    padding: 0 100px;
  }
}

@include m.media(small) {
  main {
    padding: 0 25px;
  }
}

@include m.media(very-small) {
  main {
    padding: 0 15px;
  }
}

section {
  padding-block: 100px;
}

a {
  color: inherit;
  text-decoration: none;
}

li {
  list-style: none;
}

button {
  cursor: pointer;
  user-select: none;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  user-select: none;
}

svg {
  display: flex;
}

input {
  border: none;
  outline: none;
}

.highlight {
  color: #dfdede;
  font-weight: 500;
}

